--- a/.github/workflows/run_aurore.yml
+++ b/.github/workflows/run_aurore.yml
@@ -30,6 +30,7 @@ jobs:
           GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
           GITHUB_TOKEN: ${{ secrets.AURORE_GITHUB_TOKEN }}
           GITHUB_REPO_NAME: ${{ secrets.GITHUB_REPO_NAME }}
+          GIST_ID: ${{ secrets.GIST_ID }}
           TWITTER_API_KEY: ${{ secrets.TWITTER_API_KEY }}
           TWITTER_API_SECRET: ${{ secrets.TWITTER_API_SECRET }}
           TWITTER_ACCESS_TOKEN: ${{ secrets.TWITTER_ACCESS_TOKEN }}
