--- a/.github/workflows/run_aurore.yml
+++ b/.github/workflows/run_aurore.yml
@@ -29,7 +29,7 @@ jobs:
           NEWS_API_KEY: ${{ secrets.NEWS_API_KEY }}
           GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
           GITHUB_TOKEN: ${{ secrets.AURORE_GITHUB_TOKEN }}
-          GITHUB_REPO_NAME: ${{ secrets.GITHUB_REPO_NAME }}
+          GITHUB_REPO_NAME: ${{ secrets.REPO_CIBLE }}
           KVDB_BUCKET_URL: ${{ secrets.KVDB_BUCKET_URL }}
           TWITTER_API_KEY: ${{ secrets.TWITTER_API_KEY }}
           TWITTER_API_SECRET: ${{ secrets.TWITTER_API_SECRET }}
